--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -54,6 +54,7 @@
     "typeface-roboto": "~0.0.1",
     "typescript": "~2.7.2",
     "typeface-roboto": "~0.0.1",
+    "typescript": "~2.7.2",
     "url-loader": "~1.0.1",
     "webpack": "~4.31.0",
     "webpack-cli": "~3.3.0",
