--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -26,7 +26,7 @@
     "tslint": "~5.10.0",
     "typescript": "~2.9.0",
     "webpack": "~4.41.0",
-    "webpack-cli": "~3.0.0"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "rxjs": "~6.2.2",
