--- a/system-apps/admin-notification-app/webClient/package.json
+++ b/system-apps/admin-notification-app/webClient/package.json
@@ -11,7 +11,7 @@
     "@rocketsoftware/carbon-components": "0.0.5",
     "@rocketsoftware/carbon-components-angular": "0.0.6",
     "@rocketsoftware/icons-angular": "0.0.3",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0"
   },
@@ -38,8 +38,8 @@
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "typescript": "~2.9.0",
-    "webpack": "~4.0.0",
-    "webpack-cli": "~3.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "webpack-config": "~7.5.0",
     "zone.js": "~0.8.26"
   }
