--- a/system-apps/web-browser-app/webClient/package.json
+++ b/system-apps/web-browser-app/webClient/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.9",
+    "@angular-devkit/build-angular": "^0.901.9",
     "@angular/animations": "~6.0.9",
     "@angular/cli": "~6.1.5",
     "@angular/common": "~6.0.9",
@@ -32,7 +32,7 @@
     "file-loader": "~1.1.11",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "rxjs": "~6.2.2",
     "sass-loader": "^7.2.0",
     "source-map-loader": "~0.2.3",
@@ -41,8 +41,8 @@
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2",
-    "webpack": "~4.4.0",
-    "webpack-cli": "~3.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "webpack-config": "~7.5.0",
     "zone.js": "~0.8.26"
   }
