--- a/system-apps/system-settings-preferences/webClient/package.json
+++ b/system-apps/system-settings-preferences/webClient/package.json
@@ -10,7 +10,7 @@
   "license": "EPL-2.0",
   "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "~0.803.9",
     "@angular/animations": "~6.0.9",
     "@angular/cli": "~6.1.5",
     "@angular/common": "~6.0.9",
@@ -32,6 +32,7 @@
     "css-loader": "~1.0.0",
     "exports-loader": "~0.7.0",
     "file-loader": "~1.1.11",
+    "url-loader": "2.1.0",
     "html-loader": "~0.5.5",
     "ngx-i18nsupport": "~0.17.1",
     "rxjs": "~6.2.2",
@@ -40,8 +41,8 @@
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
     "typescript": "~2.7.2",
-    "webpack": "~4.7.0",
-    "webpack-cli": "~3.0.0",
+    "webpack": "~4.42.0",
+    "webpack-cli": "~3.1.0",
     "webpack-config": "~7.5.0",
     "zone.js": "~0.8.26"
   }
